# Agentic_AI

./: .gitignore  Copy_of_01_hello_agent.ipynb  README.md  api_basics_demo.ipynb  dataclass_decorator.ipynb  main.ipynb
00-Dapr/: Readme.md
001-Decorator/: example.py  main.py  pyproject.toml
001_API/: Readme.md
01_open_AI/: README.md  app.ipynb  pyproject.toml
01_open_AI/src/open_ai/: __init__.py
01_open_AI/src/open_ai/__pycache__/: app.ipynb
02_chailit/: app.py  pyproject.toml
02_chailit/src/02_chailit/: __init__.py  chatbot.py
03_Hello_world_OpenAI/: pyproject.toml
03_Hello_world_OpenAI/src/03_hello_world_openai/: __init__.py
04_OpenAI_hello/: .gitignore  app.ipynb  app.py  main.py  pyproject.toml
05_Streaming/: openai_api_streaming.ipynb
06_Callables/: pyproject.toml
06_Callables_Generics/: main.ipynb
07_Function_Calling/: 05_tools.ipynb  main.py  pyproject.toml
08_MCP/: README.md  main.py  pyproject.toml
09_agent_as_tools/: .env  .gitignore  agent_as_tool.ipynb  app.ipynb  main.py  pyproject.toml
09_tools/: Readme.md
1_OpenAI/: README.md  main.py
Advance_Handoff_Features/: README.md  filter_data.py  handoff.py  input_data.py  mini_lab.py  pyproject.toml
Advance_Tools_Features/: .gitignore  README.md  enable_unenable.py  main.py  max_turn.py  mini_lab.py  pyproject.toml
Agent_LifeCycle/: main.py
Agent_as_clone/: .gitignore  README.md  main.py  pyproject.toml
Basic_Evals_and_External_Tracing/: main.py  pyproject.toml
Callables/: main.ipynb  main.py
Crew_AI/: Readme.md
Custom_Runner/: pyproject.toml
Decorator/: app.py
Dynamic_Instructions/: README.md  main.py  pyproject.toml
Guardrials/: main.py  math_guardrials.py  pyproject.toml  (+1 more)
RAG/: .env  (+3 more)
decorator1/: README.md  dataclass_decorator.ipynb  pyproject.toml
decorator1/src/assignment/: app.py
decorator1/src/decorator1/: __init__.py
(+81 files in other folders)
