[project]
name = "open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Ather", email = "abdullahather272@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.14",
]

[project.scripts]
open-ai = "open_ai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
