[project]
name = "02-chailit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Ather", email = "abdullahather272@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
02-chailit = "02_chailit.chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
