[project]
name = "03-hello-world-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Ather", email = "abdullahather272@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
03-hello-world-openai = "03_hello_world_openai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
