[project]
name = "decorator1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdullah Ather", email = "abdullahather272@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
decorator2 = "decorator1:main"
decorator1 = "decorator1.app:say_hello"
decoratorassign = "assignment.app:say_Abdullah"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
